--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- Start Header Area -->
 
-    <video id="background-video" autoplay loop muted style="pointer-events: none;" poster="assets/Landing Page background.mp4">
+    <video id="background-video" autoplay loop muted style="pointer-events: none;" poster="assets/images/wrap/video poster background.png">
         <source src="assets/Landing Page background.mp4" type="video/mp4">
       </video>
       
