--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                                             </li>
                                             <li class="nav-item"><a href="javascript:void(0)">Users Journal</a></li>
                                             <li class="nav-item"><a href="javascript:void(0)">Update Notes</a></li>
+                                            <li class="nav-item"><a href="/404.html">404</a></li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
