--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div class="single-feature wow fadeInUp" data-wow-delay=".2s">
                         <i class="lni lni-cloud-upload"></i>
                         <h3>Push to Notify</h3>
-                        <p>An easy-to-setup process, and top it all with our simply built push-to-notify between merchants and client in seconds.</p>
+                        <p>An easy-to-setup process, and top it all with our simply built push-to-notify between merchants and clients in seconds.</p>
                     </div>
                     <!-- End Single Feature -->
                 </div>
@@ -175,7 +175,7 @@
                     <div class="single-feature wow fadeInUp" data-wow-delay=".4s">
                         <i class="lni lni-lock"></i>
                         <h3>SSL Certificates</h3>
-                        <p>Authenticity, as there's no need to worry about for the best users privacy concern. Really, there's no need to worry.</p>
+                        <p>Authenticity, as there's no need to worry about the best user's privacy concern. Really, there's no need to worry.</p>
                     </div>
                     <!-- End Single Feature -->
                 </div>
@@ -193,7 +193,7 @@
                     <div class="single-feature wow fadeInUp" data-wow-delay=".2s">
                         <i class="lni lni-shield"></i>
                         <h3>Advanced Security</h3>
-                        <p>Advanced encryption system for where is at, to gain our users trust. With many thanks to our team's hard work for enchancing security.</p>
+                        <p>Advanced encryption system for where is at, to gain our users trust. Many thanks to our team's hard work in enhancing security.</p>
                     </div>
                     <!-- End Single Feature -->
                 </div>
@@ -202,7 +202,7 @@
                     <div class="single-feature wow fadeInUp" data-wow-delay=".4s">
                         <i class="lni lni-cog"></i>
                         <h3>Powerful API</h3>
-                        <p>Built from the ground up. WRAP'n'Track's API is one the most flexible APIs to date. Our latest and easy to go through <a href="https://docs.google.com/document/d/1uteFmNxora8O95DvoqCr8gA636BvFmkBj6h551s-0iY/edit?usp=sharing"
+                        <p>Built from the ground up. WRAP'n'Track's API is one of the most flexible APIs to date. Our latest and easy to go through <a href="https://docs.google.com/document/d/1uteFmNxora8O95DvoqCr8gA636BvFmkBj6h551s-0iY/edit?usp=sharing"
                         rel="nofollow" target="_blank">API Documentation</a>. <!--baru tau kalau bisa gini hehe-->
                         </p>
                     </div>
@@ -213,7 +213,7 @@
                     <div class="single-feature wow fadeInUp" data-wow-delay=".6s">
                         <i class="lni lni-layers"></i>
                         <h3>Database Backups</h3>
-                        <p>Nightly backups, even at an off-site backup to ensure the best experience for our users. No need to worry for long processing time as many thanks to our advanced computers all around the world.</p>
+                        <p>Nightly backups, even at an off-site backup ensure the best experience for our users. No need to worry about long processing time as many thanks to our advanced computers all around the world.</p>
                     </div>
                     <!-- End Single Feature -->
                 </div>
