--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <div class="single-feature wow fadeInUp" data-wow-delay=".2s">
                         <i class="lni lni-shield"></i>
                         <h3>Advanced Security</h3>
-                        <p>Advanced encryption system for where is at, to gain our users trust. Many thanks to our team's hard work in enhancing security.</p>
+                        <p>Advanced encryption system for where is at, to gain our user's trust. Many thanks to our team's hard work in enhancing security.</p>
                     </div>
                     <!-- End Single Feature -->
                 </div>
@@ -213,7 +213,7 @@
                     <div class="single-feature wow fadeInUp" data-wow-delay=".6s">
                         <i class="lni lni-layers"></i>
                         <h3>Database Backups</h3>
-                        <p>Nightly backups, even at an off-site backup ensure the best experience for our users. No need to worry about long processing time as many thanks to our advanced computers all around the world.</p>
+                        <p>Nightly backups, even at an off-site backup for ensuring the best experience for our users. No need to worry about long processing time as many thanks to our advanced computers all around the world.</p>
                     </div>
                     <!-- End Single Feature -->
                 </div>
@@ -229,7 +229,7 @@
                 <div class="col-lg-10 offset-lg-1 col-md-12 col-12">
                     <div class="title">
                         <h2>Trusted by merchants from over 69 different countries</h2>
-                        <p>Made with love from Indonesia. Used by merchants & clients with a passionate heart from different countries.</p>
+                        <p>Made with love from Indonesia. Used by merchants & clients with a passionate heart from around the world.</p>
                     </div>
                 </div>
             </div>
@@ -299,7 +299,7 @@
                             </div>
                             <p>Making the world a better place through constructing elegant hierarchies.</p>
                             <ul class="social">
-                                <li><a href="https://www.facebook.com/jaffanto/)"><i class="lni lni-facebook-filled"></i></a></li>
+                                <li><a href="https://www.facebook.com/Casiopea)"><i class="lni lni-facebook-filled"></i></a></li>
                                 <li><a href="https://twitter.com/elonmusk"><i class="lni lni-twitter-original"></i></a></li>
                                 <li><a href="https://www.instagram.com/mhikmal14/"><i class="lni lni-instagram"></i></a></li>
                                 <li><a href="https://www.youtube.com/channel/UCpeGSGPK782eMFOlOPwiKdw"><i class="lni lni-youtube"></i></a></li>
