--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                             </div>
                             <p>Making the world a better place through constructing elegant hierarchies.</p>
                             <ul class="social">
-                                <li><a href="https://www.facebook.com/Casiopea)"><i class="lni lni-facebook-filled"></i></a></li>
+                                <li><a href="https://www.facebook.com/Casiopea"><i class="lni lni-facebook-filled"></i></a></li>
                                 <li><a href="https://twitter.com/elonmusk"><i class="lni lni-twitter-original"></i></a></li>
                                 <li><a href="https://www.instagram.com/mhikmal14/"><i class="lni lni-instagram"></i></a></li>
                                 <li><a href="https://www.youtube.com/channel/UCpeGSGPK782eMFOlOPwiKdw"><i class="lni lni-youtube"></i></a></li>
