--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                             aria-label="Toggle navigation">Features</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="javascript:void(0)" aria-label="Toggle navigation">Overview</a>
+                                        <a href="#our-achievement section" aria-label="Toggle navigation">Overview</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="#pricing" class="page-scroll"
