--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                             aria-label="Toggle navigation">Features</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#our-achievement section" aria-label="Toggle navigation">Overview</a>
+                                        <a href="#achievementss" aria-label="Toggle navigation">Overview</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="#pricing" class="page-scroll"
@@ -223,7 +223,7 @@
     <!-- End Features Area -->
 
     <!-- Start Achievement Area -->
-    <section class="our-achievement section">
+    <section id="achievementss" section class="our-achievement section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1 col-md-12 col-12">
