--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <!-- End Features Area -->
 
     <!-- Start Achievement Area -->
-    <section id="achievementss" section class="our-achievement section">
+    <section id="achievementss" class="our-achievement section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1 col-md-12 col-12">
