whether you're a pro or starter

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="hero-content">
                         <h1 class="wow fadeInRight" data-wow-delay=".4s">A Clever app for your business.</h1>
-                        <p class="wow fadeInRight" data-wow-delay=".6s">Either you're a starter or pro. WRAP'n'Track helps you quickly communicate and confirm packages for your clients.</p>
+                        <p class="wow fadeInRight" data-wow-delay=".6s">Whether you're a pro or starter. WRAP'n'Track helps you quickly communicate and confirm packages for your clients.</p>
                         <div class="button wow fadeInRight" data-wow-delay=".8s">
                             <a href="assets/images/Concept Pic 1 - IMG_0002_067_V3 - Final Comp V2.png" target="_blank" class="btn"><i class="lni lni-apple"></i> App Store</a>
                             <a href="assets/images/Concept Pic 3 - IMG_0010_V1 - Final V1.jpg" target="_blank" class="btn btn-alt"><i class="lni lni-play-store"></i> Google
