playsinline safari fix

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- Start Header Area -->
 
-    <video id="background-video" autoplay loop muted style="pointer-events: none;" poster="assets/images/wrap/video poster background.png">
+    <video id="background-video" playsinline autoplay loop muted style="pointer-events: none;" poster="assets/images/wrap/video poster background.png">
         <source src="assets/Landing Page background.mp4" type="video/mp4">
       </video>
       
@@ -137,8 +137,7 @@
                         <p class="wow fadeInRight" data-wow-delay=".6s">Whether you're a pro or starter. WRAP'n'Track helps you quickly communicate and confirm packages for your clients.</p>
                         <div class="button wow fadeInRight" data-wow-delay=".8s">
                             <a href="assets/images/Concept Pic 1 - IMG_0002_067_V3 - Final Comp V2.png" target="_blank" class="btn"><i class="lni lni-apple"></i> App Store</a>
-                            <a href="assets/images/Concept Pic 3 - IMG_0010_V1 - Final V1.jpg" target="_blank" class="btn btn-alt"><i class="lni lni-play-store"></i> Google
-                                Play</a>
+                            <a href="assets/images/Concept Pic 3 - IMG_0010_V1 - Final V1.jpg" target="_blank" class="btn btn-alt"><i class="lni lni-play-store"></i> Google Play</a>
                         </div>
                     </div>
                 </div>
