--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
                                             aria-label="Toggle navigation">Home</a>
                                     </li>
                                     <li class="nav-item">
+                                        <a href="#preview" class="page-scroll"
+                                            aria-label="Toggle navigation">Sneak Peak</a>
+                                    </li>
+                                    <li class="nav-item">
                                         <a href="#features" class="page-scroll"
                                             aria-label="Toggle navigation">Features</a>
                                     </li>
@@ -81,9 +85,6 @@
                                     <li class="nav-item">
                                         <a href="#pricing" class="page-scroll"
                                             aria-label="Toggle navigation">Connections</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="javascript:void(0)" aria-label="Toggle navigation">Team</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
@@ -145,6 +146,28 @@
         </div>
     </section>
     <!-- End Hero Area -->
+
+    <!-- Start Preview Area -->
+    <section id="preview" class="preview section">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                   <div class="section-title">
+                          <h2 class="wow fadeInUp" data-wow-delay=".4s">Take a sneak peak of our app in operation.
+                          </h2>
+                          <p class="wow fadeInUp" data-wow-delay=".6s">Take a look at our 21st century made app, for the future.</p>
+                      </div>
+               </div>
+               <div class="col-lg-12 col-md-12 col-12">
+                   <div class="youtube-video-sneak-peak-container">
+                          <iframe class="wow fadeInUp" data-wow-delay=".8s" src="https://www.youtube.com/embed/oZp0kc78yec?autoplay=0&mute=0" gesture="media" allow="encrypted-media" allowfullscreen>
+                          </iframe>
+                   </div>
+               </div>
+           </div>
+       </div>
+      </section>
+      <!-- End Preview Area -->
 
     <!-- Start Features Area -->
     <section id="features" class="features section">
