--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                </div>
                <div class="col-lg-12 col-md-12 col-12">
                    <div class="youtube-video-sneak-peak-container">
-                          <iframe class="wow fadeInUp" data-wow-delay=".8s" src="https://www.youtube.com/embed/oZp0kc78yec?autoplay=0&mute=0" gesture="media" allow="encrypted-media" allowfullscreen>
+                          <iframe class="wow fadeInUp" data-wow-delay=".8s" src="https://www.youtube.com/embed/oZp0kc78yec?autoplay=0&mute=0&rel=0" gesture="media" allow="encrypted-media" allowfullscreen>
                           </iframe>
                    </div>
                </div>
