Added a GitHub Logo

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                </div>
                <div class="col-lg-12 col-md-12 col-12">
                    <div class="youtube-video-sneak-peak-container">
-                          <iframe class="wow fadeInUp" data-wow-delay=".8s" src="https://www.youtube.com/embed/oZp0kc78yec?autoplay=0&mute=0&rel=0" gesture="media" allow="encrypted-media" allowfullscreen>
+                          <iframe class="wow fadeInUp" data-wow-delay=".8s" src="https://www.youtube.com/embed/oZp0kc78yec?autoplay=0&mute=0&rel=0" gesture="media" allow="encrypted-media" playsinline allowfullscreen>
                           </iframe>
                    </div>
                </div>
@@ -325,6 +325,7 @@
                                 <li><a href="https://twitter.com/elonmusk"><i class="lni lni-twitter-original"></i></a></li>
                                 <li><a href="https://www.instagram.com/mhikmal14/"><i class="lni lni-instagram"></i></a></li>
                                 <li><a href="https://www.youtube.com/channel/UCpeGSGPK782eMFOlOPwiKdw"><i class="lni lni-youtube"></i></a></li>
+                                <li><a href="https://github.com/hikrar14/wrapntrack.github.io"><i class="lni lni-github"></i></a></li>
                             </ul>
                             <p class="copyright-text">Designed and Developed by <a href="https://linktr.ee/mhikmal14"
                                     rel="nofollow" target="_blank">Muhammad Hikmal Abrar Jaffanto</a>
