Change title from "Sneak Peak" to "Showcase"

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                     </li>
                                     <li class="nav-item">
                                         <a href="#preview" class="page-scroll"
-                                            aria-label="Toggle navigation">Sneak Peak</a>
+                                            aria-label="Toggle navigation">Showcase</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="#features" class="page-scroll"
