Added back the credit for the template creator.

--- a/index.html
+++ b/index.html
@@ -321,14 +321,17 @@
                             </div>
                             <p>Making the world a better place through constructing elegant hierarchies.</p>
                             <ul class="social">
-                                <li><a href="https://www.facebook.com/Casiopea"><i class="lni lni-facebook-filled"></i></a></li>
-                                <li><a href="https://twitter.com/elonmusk"><i class="lni lni-twitter-original"></i></a></li>
-                                <li><a href="https://www.instagram.com/mhikmal14/"><i class="lni lni-instagram"></i></a></li>
-                                <li><a href="https://www.youtube.com/channel/UCpeGSGPK782eMFOlOPwiKdw"><i class="lni lni-youtube"></i></a></li>
-                                <li><a href="https://github.com/hikrar14/wrapntrack.github.io"><i class="lni lni-github"></i></a></li>
+                                <li><a href="https://www.facebook.com/Casiopea" target="_blank"><i class="lni lni-facebook-filled"></i></a></li>
+                                <li><a href="https://twitter.com/elonmusk" target="_blank"><i class="lni lni-twitter-original"></i></a></li>
+                                <li><a href="https://www.instagram.com/mhikmal14/" target="_blank"><i class="lni lni-instagram"></i></a></li>
+                                <li><a href="https://www.youtube.com/channel/UCpeGSGPK782eMFOlOPwiKdw" target="_blank"><i class="lni lni-youtube"></i></a></li>
+                                <li><a href="https://github.com/hikrar14/wrapntrack.github.io" target="_blank"><i class="lni lni-github"></i></a></li>
                             </ul>
-                            <p class="copyright-text">Designed and Developed by <a href="https://linktr.ee/mhikmal14"
-                                    rel="nofollow" target="_blank">Muhammad Hikmal Abrar Jaffanto</a>
+                            <p class="copyright-text">Designed and Developed by <a href="https://uideck.com/"
+                                    rel="nofollow" target="_blank">Graygrids Team over at UIdeck</a>
+                            </p>
+                            <p class="copyright-text">Modified by <a href="https://linktr.ee/mhikmal14"
+                                rel="nofollow" target="_blank">Muhammad Hikmal Abrar Jaffanto</a>
                             </p>
                         </div>
                         <!-- End Single Widget -->
