Changes to credits and disabling 'Connections'

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                                     <li class="nav-item">
                                         <a href="#achievementss" aria-label="Toggle navigation">Overview</a>
                                     </li>
-                                    <li class="nav-item">
+                                    <!--li class="nav-item">
                                         <a href="#pricing" class="page-scroll"
                                             aria-label="Toggle navigation">Connections</a>
-                                    </li>
+                                    </li-->
                                     <li class="nav-item">
                                         <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
                                             data-bs-target="#submenu-1-4" aria-controls="navbarSupportedContent"
@@ -330,7 +330,7 @@
                             <p class="copyright-text">Designed and Developed by <a href="https://uideck.com/"
                                     rel="nofollow" target="_blank">Graygrids Team over at UIdeck</a>
                             </p>
-                            <p class="copyright-text">Modified by <a href="https://linktr.ee/mhikmal14"
+                            <p class="copyright-text">Modified and Hosted by <a href="https://linktr.ee/mhikmal14"
                                 rel="nofollow" target="_blank">Muhammad Hikmal Abrar Jaffanto</a>
                             </p>
                         </div>
