Changes to features messages.

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                         <i class="lni lni-cog"></i>
                         <h3>Powerful API</h3>
                         <p>Built from the ground up. WRAP'n'Track's API is one of the most flexible APIs to date. Our latest and easy to go through <a href="https://docs.google.com/document/d/1uteFmNxora8O95DvoqCr8gA636BvFmkBj6h551s-0iY/edit?usp=sharing"
-                        rel="nofollow" target="_blank">API Documentation</a>. <!--baru tau kalau bisa gini hehe-->
+                        rel="nofollow" target="_blank">API Documentation</a>  is available to our end-users. <!--baru tau kalau bisa gini hehe-->
                         </p>
                     </div>
                     <!-- End Single Feature -->
