Changes to credit messages

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                             <p class="copyright-text">Designed and Developed by <a href="https://uideck.com/"
                                     rel="nofollow" target="_blank">Graygrids Team over at UIdeck</a>
                             </p>
-                            <p class="copyright-text">Modified and Hosted by <a href="https://linktr.ee/mhikmal14"
+                            <p class="copyright-text">Concept Idea, Hosting and Modified by <a href="https://linktr.ee/mhikmal14"
                                 rel="nofollow" target="_blank">Muhammad Hikmal Abrar Jaffanto</a>
                             </p>
                         </div>
