Changed the landing page background format type from .mp4 to .webm for optimization purposes.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Start Header Area -->
 
     <video id="background-video" playsinline autoplay loop muted style="pointer-events: none;" poster="assets/images/wrap/video poster background.png">
-        <source src="assets/Landing Page background.mp4" type="video/mp4">
+        <source src="assets/Landing-Page-background.webm" type="video/webm">
       </video>
       
     <header class="header navbar-area">
